--- a/数据库报告.md
+++ b/数据库报告.md
@@ -19,7 +19,153 @@
 
 - 数据流图
 
+  图片
+
 - 数据元素表
+
+  根据数据流图，我构建出实际处理过程中要用到的实体，并完善属性，构造每个实体的数据元素表如下
+
+  患者（Patient）数据元素表
+
+  | 特征     | 数据项名字       | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束                                     | 允许空值否 | 值个数 |
+  | -------- | ---------------- | -------- | -------- | -------- | ---- | ------------------------------------------ | ---------- | ------ |
+  | 编号: 1  | Name             | VARCHAR  | 255      | -        | -    | -                                          | 否         | 1      |
+  | 编号: 2  | Gender           | ENUM     | -        | -        | -    | '1'-男, '2'-女                             | 否         | 1      |
+  | 编号: 3  | BirthDate        | DATE     | -        | -        | -    | -                                          | 否         | 1      |
+  | 编号: 4  | Age              | INT      | -        | -        | -    | -                                          | 是         | 1      |
+  | 编号: 5  | Nationality      | VARCHAR  | 50       | -        | -    | -                                          | 是         | 1      |
+  | 编号: 6  | PlaceOfBirth     | VARCHAR  | 255      | -        | -    | -                                          | 是         | 1      |
+  | 编号: 7  | Ethnicity        | VARCHAR  | 50       | -        | -    | -                                          | 是         | 1      |
+  | 编号: 8  | IDCardNumber     | VARCHAR  | 18       | -        | -    | 唯一，非空                                 | 否         | 1      |
+  | 编号: 9  | Occupation       | VARCHAR  | 100      | -        | -    | -                                          | 是         | 1      |
+  | 编号: 10 | MaritalStatus    | ENUM     | -        | -        | -    | 'Married', 'Single', 'Divorced', 'Widowed' | 是         | 1      |
+  | 编号: 11 | CurrentAddress   | TEXT     | -        | -        | -    | -                                          | 是         | 1      |
+  | 编号: 12 | Phone            | VARCHAR  | 20       | -        | -    | -                                          | 是         | 1      |
+  | 编号: 13 | PostalCode       | VARCHAR  | 10       | -        | -    | -                                          | 是         | 1      |
+  | 编号: 14 | HouseholdAddress | TEXT     | -        | -        | -    | -                                          | 是         | 1      |
+
+  联系人（Contact）数据元素表
+
+  | 特征    | 数据项名字   | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ------------ | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | ID           | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | PatientID    | VARCHAR  | 18       | -        | -    | 外键，非空 | 否         | 1      |
+  | 编号: 3 | Name         | VARCHAR  | 255      | -        | -    | 非空       | 否         | 1      |
+  | 编号: 4 | Relationship | VARCHAR  | 50       | -        | -    | -          | 是         | 1      |
+  | 编号: 5 | Address      | TEXT     | -        | -        | -    | -          | 是         | 1      |
+  | 编号: 6 | Phone        | VARCHAR  | 20       | -        | -    | -          | 是         | 1      |
+
+  病历记录（MedicalRecord）数据元素表
+
+  | 特征     | 数据项名字              | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | -------- | ----------------------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1  | MedicalRecordNumber     | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2  | PatientIDCardNumber     | VARCHAR  | 18       | -        | -    | 外键，非空 | 否         | 1      |
+  | 编号: 3  | AdmissionDate           | DATE     | -        | -        | -    | -          | 是         | 1      |
+  | 编号: 4  | DischargeDate           | DATE     | -        | -        | -    | -          | 是         | 1      |
+  | 编号: 5  | UnitID                  | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 6  | AdmissionDiagnosisID    | VARCHAR  | 255      | -        | -    | 外键       | 是         | 1      |
+  | 编号: 7  | DischargeDiagnosisID    | VARCHAR  | 255      | -        | -    | 外键       | 是         | 1      |
+  | 编号: 8  | PathologicalDiagnosisID | VARCHAR  | 255      | -        | -    | 外键       | 是         | 1      |
+  | 编号: 9  | TreatStaffID            | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 10 | BloodType               | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 11 | PayMentMethod           | VARCHAR  | 50       | -        | -    | -          | 是         | 1      |
+
+  疾病（Disease）数据元素表
+
+  | 特征    | 数据项名字  | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ----------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | DiseaseID   | VARCHAR  | 255      | -        | -    | 主键，非空 | 否         | 1      |
+  | 编号: 2 | Description | VARCHAR  | 255      | -        | -    | 非空       | 否         | 1      |
+
+  手术（Surgery）数据元素表
+
+  | 特征    | 数据项名字         | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ------------------ | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | SurgeryID          | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | MedicalRecordID    | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 3 | SurgeryDate        | DATE     | -        | -        | -    | 非空       | 否         | 1      |
+  | 编号: 4 | SurgeryName        | VARCHAR  | 255      | -        | -    | -          | 是         | 1      |
+  | 编号: 5 | SurgeonID          | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 6 | AssistantSurgeonID | INT      | -        | -        | -    | 外键       | 是         | 1      |
+
+  科室（Unit）数据元素表
+
+  | 特征    | 数据项名字 | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ---------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | UnitID     | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | Name       | VARCHAR  | 255      | -        | -    | 非空       | 否         | 1      |
+
+  病房（Ward）数据元素表
+
+  | 特征    | 数据项名字  | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ----------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | WardID      | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | UnitID      | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 3 | Description | VARCHAR  | 255      | -        | -    | -          | 是         | 1      |
+
+  病历病房关联（MedicalRecordWards）数据元素表
+
+  | 特征    | 数据项名字      | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | --------------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | MedicalRecordID | INT      | -        | -        | -    | 外键，主键 | 否         | 1      |
+  | 编号: 2 | WardID          | INT      | -        | -        | -    | 外键，主键 | 否         | 1      |
+  | 编号: 3 | StartTime       | DATETIME | -        | -        | -    | -          | 是         | 1      |
+  | 编号: 4 | EndTime         | DATETIME | -        | -        | -    | -          | 是         | 1      |
+
+  成本（Cost）数据元素表
+
+  | 特征    | 数据项名字      | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | --------------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | CostID          | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | MedicalRecordID | INT      | -        | -        | -    | 外键       | 否         | 1      |
+  | 编号: 3 | Amount          | DECIMAL  | 10       | 2        | -    | 非空       | 否         | 1      |
+  | 编号: 4 | Kind            | VARCHAR  | 50       | -        | -    | -          | 是         | 1      |
+
+  员工（Staff）数据元素表
+
+  | 特征    | 数据项名字 | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ---------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | StaffID    | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | Name       | VARCHAR  | 255      | -        | -    | 非空       | 否         | 1      |
+  | 编号: 3 | Position   | VARCHAR  | 255      | -        | -    | -          | 是         | 1      |
+  | 编号: 4 | UnitID     | INT      | -        | -        | -    | 外键       | 是         | 1      |
+
+  血型（BloodType）数据元素表
+
+  | 特征    | 数据项名字  | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ----------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | BloodTypeID | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | Type        | VARCHAR  | 50       | -        | -    | 非空       | 否         | 1      |
+  | 编号: 3 | RhType      | VARCHAR  | 50       | -        | -    | 非空       | 否         | 1      |
+
+  病历借阅（MedicalRecordBorrow）数据元素表
+
+  | 特征     | 数据项名字          | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束              | 允许空值否 | 值个数 |
+  | -------- | ------------------- | -------- | -------- | -------- | ---- | ------------------- | ---------- | ------ |
+  | 编号: 1  | BorrowID            | INT      | -        | -        | -    | 主键，自增          | 否         | 1      |
+  | 编号: 2  | MedicalRecordNumber | INT      | -        | -        | -    | 外键，非空          | 否         | 1      |
+  | 编号: 3  | BorrowDate          | DATETIME | -        | -        | -    | 非空                | 否         | 1      |
+  | 编号: 4  | BorrowedBy          | VARCHAR  | 255      | -        | -    | 非空                | 否         | 1      |
+  | 编号: 5  | UnitID              | INT      | -        | -        | -    | 外键                | 是         | 1      |
+  | 编号: 6  | IDCardNumber        | VARCHAR  | 18       | -        | -    | 外键                | 是         | 1      |
+  | 编号: 7  | BorrowReason        | TEXT     | -        | -        | -    | -                   | 是         | 1      |
+  | 编号: 8  | ContactPhone        | VARCHAR  | 18       | -        | -    | -                   | 是         | 1      |
+  | 编号: 9  | Approver            | VARCHAR  | 255      | -        | -    | -                   | 是         | 1      |
+  | 编号: 10 | Status              | ENUM     | -        | -        | -    | 非空，默认'Pending' | 否         | 1      |
+
+  病历归还（MedicalRecordReturn）数据元素表
+
+  | 特征    | 数据项名字          | 数据类型 | 数据宽度 | 小数位数 | 单位 | 值约束     | 允许空值否 | 值个数 |
+  | ------- | ------------------- | -------- | -------- | -------- | ---- | ---------- | ---------- | ------ |
+  | 编号: 1 | ReturnID            | INT      | -        | -        | -    | 主键，自增 | 否         | 1      |
+  | 编号: 2 | MedicalRecordNumber | INT      | -        | -        | -    | 外键，非空 | 否         | 1      |
+  | 编号: 3 | ReturnDate          | DATETIME | -        | -        | -    | 非空       | 否         | 1      |
+  | 编号: 4 | ReturnedBy          | VARCHAR  | 255      | -        | -    | 非空       | 否         | 1      |
+  | 编号: 5 | UnitID              | INT      | -        | -        | -    | 外键       | 是         | 1      |
+  | 编号: 6 | IDCardNumber        | VARCHAR  | 18       | -        | -    | 外键       | 是         | 1      |
+  | 编号: 7 | ContactPhone        | VARCHAR  | 18       | -        | -    | -          | 是         | 1      |
+
 
 ## 2 数据库系统的概念模式（E-R 图）
 - 实体关系图（E-R 图）
@@ -191,15 +337,25 @@
 
 #  系统实现总结报告
 
-#### 2.1 实现环境
+## 1 实现环境
 前端实现环境：
 
 后端实现环境：PyCharm 2023.3.2 (Community Edition),  Visual Studio Code Ver 1.95.2（user setup），MySQL  Ver 8.0.39 for Win64 on x86_64 (MySQL Community Server - GPL)， python3.12
 
-#### 2.2 系统功能结构图
+## 2 系统功能结构图
+| 日常业务 | 信息查询     | 统计报表         |
+| -------- | ------------ | ---------------- |
+| 新建病案 | 病案检索     | 医疗费用报表     |
+| 修改病案 | 疾病信息查询 | 科室就诊情况报表 |
+| 删除病案 | 手术信息查询 | 疾病分类报表     |
+| 病案借阅 | 患者信息查询 | 出院病人信息报表 |
+| 病案归还 | 借阅信息查询 |                  |
+| 借阅审批 | 入院信息查询 |                  |
+|          | 出院信息查询 |                  |
+
 主页功能菜单栏
 
-#### 2.3 基本表的定义
+## 3 基本表的定义
 1. **User**
    - uid（用户ID）：INT NOT NULL AUTO_INCREMENT, 主键
    - name（姓名）：VARCHAR(45) NOT NULL
@@ -295,7 +451,7 @@
     - IDCardNumber（身份证号码）：INT, 外键
     - ContactPhone（联系电话）：VARCHAR(18）
 
-#### 2.4 系统的安全性设计
+## 4 系统的安全性设计
 - 对于不同用户角色，我们应当为其分配不同的访问权限，在执行病案管理相关功能前进行检查并执行安全措施。
 
 - 根据实际需求，我们在设计报告中就已经确认了各用户应具有的权限：
@@ -361,66 +517,83 @@
 
   
 
-#### 2.5 存储过程、触发器和函数的代码说明
-- 提供数据库中存储过程、触发器和函数的实现代码。
+## 5 存储过程、触发器和函数的代码说明
+触发器和函数没有使用，对于存储过程，有如下代码：
 
-  触发器和函数没有使用，对于存储过程，有如下代码：
+对于用户登录与注册，我们有如下数据库代码：
 
-  对于用户登录与注册，我们有如下数据库代码：
+```mysql
 
-  ```mysql
-  
-  ```
+```
 
-  对于新建病案，我们有如下数据库代码：
+对于新建病案，我们有如下数据库代码：
 
-  ```mysql
-  
-  ```
+```mysql
 
-  对于查询病案，我们有如下数据库代码：
+```
 
-  ```mysql
-  
-  ```
+对于查询病案，我们有如下数据库代码：
 
-  对于删除病案，我们有如下数据库代码：
+```mysql
 
-  ```mysql
-  
-  ```
+```
 
-  对于病案借阅与归还，我们有如下数据库代码：
+对于删除病案，我们有如下数据库代码：
 
-  ```mysql
-  
-  ```
+```mysql
 
-  对于相关信息的查询，我们有如下数据库代码：
+```
 
-  ```mysql
-  
-  ```
+对于病案借阅与归还，我们有如下数据库代码：
 
-  对于数据统计，我们有如下数据库代码：
+```mysql
 
-  ```mysql
-  
-  ```
+```
 
-  
+对于相关信息的查询，我们有如下数据库代码：
+
+```mysql
+
+```
+
+对于数据统计，我们有如下数据库代码：
+
+```mysql
+
+```
+
+
 
 ​	
 
-#### 2.6 实现过程中主要技术和主要模块的论述
-- 讨论在实现过程中使用的关键技术和遇到的主要模块。
+## 6 实现过程中主要技术和主要模块的论述
+- 关键技术：
 
-#### 2.7 若干展示系统功能的运行实例
+  MySQL数据库：
+
+  PyQt：
+
+- 主要模块：
+
+  登录注册模块：
+
+  病案管理模块：
+
+  借阅归还模块：
+
+  数据统计模块：
+
+## 7 若干展示系统功能的运行实例
 - 提供系统功能的实际操作示例，包括界面截图和操作步骤。
 
-#### 2.8 源程序简要说明
+## 8 源程序简要说明
 - 提供关键源代码的简要说明，包括主要函数和类。
 
-#### 2.9 收获和体会
-- 总结在系统开发过程中的学习和经验。
+## 9 收获和体会
+
+在短暂的开发过程中，我最大的收获就是对数据库与sql语句有了更深刻的认识。我对数据库的结构性质有了更深的了解，能够更加熟练地利用sql语句实现对应的需求。不仅如此，我意识到，对于大部分项目，数据库都是必不可少的后端组成部分，重要性不言而喻，因此，在项目设计开始，就要对数据库设计做好研究。这里的研究不仅是代码层面上的，更是业务需求层面上的。我们需要深入理解我们要实现的项目，才能更好地实现数据库的设计。另外，在项目实现过程中，我收获了很多合作开发的经验。如何使用相关的开发工具来让整体和个人的工作更加高效，如何处理协调前后端的工作，如何更高效地搜集开发中需要的知识与信息，在这些方面我变得更加熟练，这些能让我更好的应付之后的实习工作。
+
+与其他开发项目中接触过的语言相比，sql语言是我最不熟悉的语言之一，这次的开发过程，对我来说是一次挑战。很幸运，我们坚持了下来并完成了这样一个项目，我为我们小组的努力与付出感到自豪。但我也知道，我们这次的大作业所实现的项目相较于真正的项目开发来说，就是一个玩具，甚至连玩具的级别都达不到。所以，我现在的能力还是远远不够的，我还需要继续努力，丰富这一方面的知识，积累更多经验，让自己去成为一个更好的计算机行业从业者。
+
+
 
