--- a/数据库报告.md
+++ b/数据库报告.md
@@ -569,25 +569,91 @@
 ## 6 实现过程中主要技术和主要模块的论述
 - 关键技术：
 
-  MySQL数据库：
+  MySQL数据库：用于存储和管理用户信息，如账号、密码、身份、科室等,支持用户的注册、登录等操作，通过数据库进行数据验证和存储,并通过Python与MySQL的连接实现数据交互。
 
-  PyQt：
+  PyQt：用于创建图形化用户界面（GUI），提供了丰富的控件（如QLabel、QLineEdit、QPushButton、QComboBox等）用于实现用户登录、注册界面的布局和交互，支持信号与槽机制，实现界面间的切换和用户操作的响应。
 
 - 主要模块：
 
-  登录注册模块：
+  登录注册模块：用户输入账号和密码，点击“登录”按钮后，验证输入的账号和密码是否正确，成功登录后，显示主界面 ，并将用户名传递给主界面，提供“注册新用户”按钮，切换到注册界面。在注册界面用户输入新账号、密码、身份（病人或医生）、以及医生特有的科室、证件号和姓名信息，随后根据选择的身份，动态显示或隐藏医生相关字段，点击“注册”按钮后，提交注册信息，并返回登录界面。
 
-  病案管理模块：
+  病案管理模块：用户可以在界面上输入不同的检索条件，然后点击“查询”按钮后，系统会根据输入的条件去数据库中检索对应的数据。
 
-  借阅归还模块：
+  借阅归还模块：用户可以输入病案号、借阅人信息、所属科室、证件号、借阅原因、联系电话等，并提交借阅请求，借阅需要管理员进行审批，在审批后借阅成功，同时也需要归还。
 
-  数据统计模块：
+  数据统计模块：通过查询特定时间段里的特定项目，返回对应的数据。
 
 ## 7 若干展示系统功能的运行实例
-- 提供系统功能的实际操作示例，包括界面截图和操作步骤。
+#### 	登录：
+
+​		输入账号后登录，注册同理。
+
+![image-20241221125026533](C:\Users\huawei\AppData\Roaming\Typora\typora-user-images\image-20241221125026533.png)
+
+​	主界面：
+
+​			主界面提供各种功能，点击对应项即可跳转到相应界面。
+
+![image-20241221125223637](C:\Users\huawei\AppData\Roaming\Typora\typora-user-images\image-20241221125223637.png)
+
+新建、修改、删除病案：
+
+​	填入相应的信息进行新建、修改和删除。
+
+借阅、归还：
+
+​	跟据医生的需求，借阅某病案号的病案，及时归还，同时需要管理员审批。
+
+查询：
+
+​	跟据对应的条件和名字，查询不同类别的信息。
+
+报表：
+
+​	可通过调整时间段来获取不同表项的报表数据。
 
 ## 8 源程序简要说明
-- 提供关键源代码的简要说明，包括主要函数和类。
+![image-20241221125711303](C:\Users\huawei\AppData\Roaming\Typora\typora-user-images\image-20241221125711303.png)
+
+​	通过main函数调用整个前端界面，ui类为所有的前端结构，代码结构大致为：
+
+```
+from PyQt5 import QtCore, QtGui, QtWidgets
+from db.login_op import sign, login
+from ui.主界面 import Ui_MainWindow1
+
+#先布局界面
+class LoginWindow(QtWidgets.QWidget):
+class RegisterWindow(QtWidgets.QWidget):
+
+    switch_to_login = QtCore.pyqtSignal()
+
+    def __init__(self):
+        super().__init__()
+        self.setup_ui()
+
+    def setup_ui(self):
+        self.setWindowTitle("注册界面")
+        self.resize(1000, 800)
+#再实现对应功能的函数
+
+    def update_doctor_fields_visibility(self):
+
+    def register_action(self):
+#在最后进行运行与调试
+if __name__ == "__main__":
+    import sys
+
+    app = QtWidgets.QApplication(sys.argv)
+    main_app = MainApplication()
+    main_app.setWindowTitle("用户管理系统")
+    main_app.resize(1000, 800)
+    main_app.show()
+    sys.exit(app.exec_())
+
+```
+
+
 
 ## 9 收获和体会
 
